# harmony

./: .env.example  .env.test.example  .eslintignore  .eslintrc.cjs  .gitignore  BENCHMARKING.md  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  FEDERATION.md  LICENSE-ADDITIONAL-TERMS.md  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  docker-compose.full.yml  docker-compose.prod.yml  env.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  typedoc.json  vite-plugin-selective-preload.ts  vite.config.ts  vitest.config.ts  vitest.db.config.ts  vitest.integration.config.ts  vue-docgen.config.js
.cursor/rules/: database-conventions.mdc  encryption-system.mdc  frontend-conventions.mdc  harmony-project.mdc  realtime-architecture.mdc  testing-conventions.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  tauri.yml
bot-gateway/: .env.example  BOT_MESSAGES_FIX.md  Dockerfile  README.md  env.template  package-lock.json  package.json  tsconfig.json
bot-gateway/src/: index.ts
bot-plugins/: .gitignore  README.md
bull-board/: Dockerfile  package-lock.json  package.json  server.js
db_schema/init/: 00_extensions.sql  01_types.sql  02_tables_core.sql  03_tables_social.sql  04_tables_servers.sql  05_tables_federation.sql  06_tables_misc.sql  07_tables_trending.sql  08_tables_bots_extended.sql  09_tables_encryption.sql  10_functions_core.sql  11_functions_triggers.sql  12_functions_rpc.sql  13_functions_rpc_extended.sql  (+17 more)
dev/: Caddyfile  README.md  docker-compose.yml  nginx-bullboard.template.conf  nginx-docs.conf  nginx-docs.template.conf  nginx-harmony.conf  nginx-harmony.template.conf  nginx-livekit.conf  start.sh  stop.sh  supabase-docker-compose.patch.yml
docs/: 2FA_SECURITY_MODEL.md  ACTIVITYPUB_EXTENSIONS.md  API_REFERENCE.md  ARCHITECTURE.md  BOT_API.md  BOT_GATEWAY_SETUP.md  COMPONENTS.md  DEVELOPMENT.md  E2EE_IMPLEMENTATION.md  FEDERATION.md  FRONTEND_BOT_INTEGRATION.md  HOW_TO_SELF_HOST.md  LINK_PREVIEW_SETUP.md  OAUTH_PROVIDER_CONFIG.md  OPENSTATUS_SETUP.md  PLUGIN_SYSTEM.md  PUSH_NOTIFICATIONS.md  QUICK_START.md  README.md  SERVICES.md  SETTINGS_NAVIGATION_GUIDE.md  STATE_MANAGEMENT.md  SUPABASE_MFA_AAL_GUIDE.md  SYSTEM_FLOWS.md  SYSTEM_FLOW_DIAGRAMS.md  TESTING.md  USER_SCOPED_STORAGE.md  VITEPRESS_SETUP.md  bot-api.md  index.md  self-hosting.md
federation-backend/: .dockerignore  .env.example  .gitignore  DOCKER_USAGE.md  Dockerfile  Dockerfile.dev  README.md  backfill-keys.ts  backfill-posts.ts  check-misskey-follows.ts  check-remote-users.ts  diagnose-deep.ts  diagnose-federation.ts  docker-compose.yml  env.template  package-lock.json  package.json  refresh-remote-users.ts  tsconfig.json  vitest.config.ts
public/: browserconfig.xml  manifest.json  offline.html  service-worker.js
scripts/: auto_audiopack.py  benchmark-api.sh  benchmark-voice.sh  build-background-manifest.mjs  build-emoji-data.mjs  build-unicode-emoji-data.mjs  dump_harmony_schema.sh  dump_harmony_schema.sql  export_supabase_minimal.sh  generate-api-docs.mjs  generate-component-docs.mjs  generate-docs.sh  generate-guide-docs.mjs  generate-mutant-emoji-index.mjs  install.sh  migrate-console-to-debug.sh  move-background-images.mjs  process-mutant-emoji-data.mjs  set-version.mjs  setup-docs.sh  sync-vitepress-config.mjs  test-e2ee-bundle.mjs  update-vitepress-config.mjs
self-host/: .env.example  .gitignore  Caddyfile  README.md  bootstrap.sh  configure.sh  docker-compose.yml  trim-supabase.py  update.sh  web-nginx.conf  web.Dockerfile
src/: App.vue  i18n.ts  main.ts  supabase.ts  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/crates/harmony-media/: Cargo.toml
src-tauri/crates/harmony-media/src/: audio_devices.rs  camera.rs  engine.rs  events.rs  lib.rs  screencast.rs  video.rs
src-tauri/icons/: icon.icns
src-tauri/src/: call_window.rs  games.json  lib.rs  main.rs  overlay.rs
src-tauri/src/commands/: media.rs  mod.rs  presence.rs  ptt.rs
tests/: setup.ts
webrtc/: README.md  TESTING.md  docker-compose.example.yml  egress.yaml  env.example  livekit.yaml.example
(+1497 files in other folders)
