[package]
name = "app"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
license = "AGPL-3.0"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9", features = ["protocol-asset", "devtools"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
