[workspace]
members = [".", "crates/harmony-media"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

[package]
name = "app"
version = "1.4.0"
description = "Harmony desktop client"
authors = ["Knowmad"]
license = "AGPL-3.0"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
log = "0.4"
tauri = { version = "=2.9.3", features = ["protocol-asset", "devtools", "unstable", "tray-icon", "macos-private-api"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-notification = "2"

# desktop-only UX plugins; not applicable to mobile
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "=2.2.0"
sysinfo = "0.30"
# non-grabbing global input observation for push-to-talk (X11/Windows/macOS; no Wayland)
rdev = "0.5"

[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies.wgpu]
version = "30"
optional = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

# native media engine is desktop-linux only; webview WebRTC covers other platforms
[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies]
harmony-media = { path = "crates/harmony-media", optional = true }

[features]
default = ["native-media"]
custom-protocol = ["tauri/custom-protocol"]
native-media = ["dep:harmony-media", "dep:wgpu"]
